made data model for sheet music

--- a/templates/main.html
+++ b/templates/main.html
@@ -7,4 +7,8 @@
             <input class='form-control input-lg' type="text" placeholder="Vivaldi 4 Seasons">
         </form>
     </div>
+    {% block footer %}
+        {{ super() }}
+    {% endblock footer %}
 {% endblock content %}
+
