--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,12 @@
 
 {% block title %} SheetSwap {% endblock %}
 
+{% block styles %}
+    {{ super() }}
+    <link rel="stylesheet"
+          href="{{ url_for('static', filename='assets/css/base.css') }}">
+{% endblock styles %}
+
 {% block navbar %}
 
     <div class="navbar navbar-inverse" role="navigation">
@@ -9,8 +15,6 @@
             <button type="button" class="navbar-toggle"
                     data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -31,14 +35,15 @@
     {{ super() }}
 
     {% block footer %}
-        <footer class="footer">
-
-        <a href="http://flask.pocoo.org/"><img
-           src="http://flask.pocoo.org/static/badges/made-with-flask-s.png"
-           border="0"
-           alt="made with Flask"
-           title="made with Flask">
-        </a>
+        <footer id="footer" class="footer">
+            <div class="container">
+                <a href="http://flask.pocoo.org/"><img
+                   src="http://flask.pocoo.org/static/badges/made-with-flask-s.png"
+                   border="0"
+                   alt="made with Flask"
+                   title="made with Flask">
+                </a>
+             </div>
         </footer>
     {% endblock footer %} {# end footer #}
 {% endblock content %}
