added search controller and template

--- a/templates/sheets/sheet_music_stub.html
+++ b/templates/sheets/sheet_music_stub.html
@@ -1,8 +1,10 @@
 {#  templates/sheets/sheet_music_stub.html #}
 <li class="sheet-music-stub col-xs-12 col-sm-6 col-md-4 col-lg-3">
     <div class="panel panel primary">
-        <div class="panel-heading">
-            {{ sheet_music.title }}
+        <div class="panel-heading text-center">
+            <a href="{{ url_for('sheets.index', sheet_music_id = sheet_music.id) }}">
+                {{ sheet_music.title }}
+            </a>
         </div>
     </div>
 
