--- a/templates/main.html
+++ b/templates/main.html
@@ -3,8 +3,8 @@
 {% block page_content %}
     <div class="container jumbotron text-center">
         <h1>Trade your sheet music!</h1>
-        <form>
-            <input class='form-control input-lg' type="text" placeholder="Vivaldi 4 Seasons">
+        <form action="{{ url_for('.search_results') }}" method="GET">
+            <input name="q" class='form-control input-lg' type="text" placeholder="Vivaldi 4 Seasons">
         </form>
     </div>
 
