--- a/templates/items/remove_item.html
+++ b/templates/items/remove_item.html
@@ -1,7 +1,5 @@
 {% extends 'base.html' %}
 
-
 {% block page_content %}
-
-    <h1> Items </h1>
-{% endblock page_content %}
+    <h1>Delete Item</h1>
+{% endblock %}
