--- a/templates/items/index.html
+++ b/templates/items/index.html
@@ -1,7 +1,5 @@
 {% extends 'base.html' %}
 
-
 {% block page_content %}
-
-    <h1> Items </h1>
+    {% include 'items/item_list.html' %}
 {% endblock page_content %}
