--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/">Home</a></li>
                     {% if current_user %}
-                    <li><a href="#">Dashboard</a></li>
+                    <li><a href="{{ url_for('main.dashboard') }}">Dashboard</a></li>
                     <li><a href="{{  url_for('auth.logout') }}">Logout</a></li>
                     {% else %}
                     <li><a href="{{ url_for('auth.login') }}">Login</a></li>
