--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -1,5 +1,14 @@
 {% extends 'base.html' %}
-
+{% block sub_title %}dashboard{% endblock %}
 {% block page_content %}
     <h1>This is your dashboard {{ current_user }}</h1>
+
+    <h1>Trades Pending</h1>
+    {% if trades %}
+    <ul>
+    {% for trade in trades %}
+        <li>{{ trade }}</li>
+    {% endfor %}
+    </ul>
+    {% endif %}
 {% endblock page_content %}
