--- a/templates/trades/trading.html
+++ b/templates/trades/trading.html
@@ -3,6 +3,6 @@
 {% block sub_title %}Trading{% endblock sub_title %}
 
 {% block page_content %}
-    <h1 class="jumbotron">Trading</h1>
+    <h1 class="jumbotron">Trading with {{ from_user.username }}</h1>
     {% include 'items/item_list.html' %}
 {% endblock page_content %}
