--- a/templates/items/create_item.html
+++ b/templates/items/create_item.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
+{% import 'form_macros.html' as forms %}
 
 {% block page_content %}
     <h1> Create Item</h1>
-    {{ posting }}
+    {{ forms.create_form(form, 'items.create') }}
 {% endblock  page_content %}
