--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% import 'util.html' as util %}
 
 {% block page_content %}
     <div class="row well-lg">
@@ -16,6 +17,18 @@
         {% endfor %}
       </ul>
   {% else %}
-    <h2>No result found, if you have this, you can trade it!</h2>
+    </h2>
+      <div class="jumbotron">
+          <h2>No result found, if you have this...</h2>
+          <h1>{{ util.form_button(
+                  url_for('sheets.create'),
+                  util.icon("plus") ~ " Add and Trade it!",
+                  method="get",
+                  input=True,
+                  input_value=1,
+                  input_name="creating_item"
+                  ) }}
+          </h1>
+      </div>
   {% endif %}
 {% endblock %}
