--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -11,8 +11,8 @@
 {% block page_content %}
     <h1>This is your dashboard, {{ current_user.username }}</h1>
 
-    <h1>Trades Pending</h1>
     {% if trades %}
+    <h1>Trades Pending</h1>
     <ul>
 
     {% for trade in trades %}
@@ -29,21 +29,27 @@
         <h1>No trades pending</h1>
     {% endif %}
 
-    <h1> Trades Completed</h1>
     {% if completed_trades %}
+    <h1> Trades Completed</h1>
         <ul>
             {% for trade in completed_trades %}
                 <li>{{ trade }} </li>
             {% endfor %}
         </ul>
+    {% else %}
+        <h1>No completed Trades</h1>
     {% endif %}
 
+    {% if rejected_trades %}
     <h1>Trades Rejected</h1>
         <ul>
             {% for trade in rejected_trades %}
                 <li>{{ trade }}</li>
             {% endfor %}
         </ul>
+    {% else %}
+        <h1> No rejected trades</h1>
+    {% endif %}
 
 {% endblock page_content %}
 
