--- a/templates/items/item_stub.html
+++ b/templates/items/item_stub.html
@@ -3,26 +3,25 @@
 
 <li class="item-stub col-xs-12 col-sm-6 col-lg-3">
     <div class="panel panel-default">
-        {% if not trading %}
-        <div class="panel-heading">
-            {% with post_url = url_for('trades.request_trade', requested_item_id=item.id) %}
-                {{ item.sheetmusic.title }} {{  util.form_button(post_url, util.icon('random'))  }}
-            {% endwith %}
-        </div>
-        {%  else %}
-        <div class="panel-heading">
-            {% with post_url = url_for('trades.trading') %}
-                {{ item.sheetmusic.title }}
-                {{  util.form_button(post_url,
-                        util.icon('thumbs-up'),
+        {% if trading %}
+            {% set post_url = url_for('trades.trading') %}
+            {% set form_button = util.form_button(post_url,
+                util.icon('thumbs-up'),
                         input=True,
                         input_value= item.id ~ " " ~ trade_id,
-                        input_name="trade_item")  }}
-            {% endwith %}
-        </div>
+                        input_name="trade_item") %}
+        {% else %}
+            {% set post_url = url_for('trades.request_trade', requested_item_id=item.id) %}
+            {% set form_button=util.form_button(post_url,
+                util.icon('random')) %}
         {% endif %}
+        <div class="panel-heading">
+                {{ item.sheetmusic.title }} {{ form_button }}
+        </div>
         <div class="Panel-body">
             {{ item.condition }}
         </div>
     </div>
 </li>
+
+
