--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% import 'form_macros.html' as forms %}
 
+{% block sub_title %}login{% endblock sub_title %}
+
 {% block page_content %}
     <h1> LOGIN </h1>
     {{  forms.create_form(form, '.login') }}
