--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
 {% block navbar %}
 
-    <div class="navbar navbar-inverse" role="navigation">
+    <nav class="navbar navbar-inverse" role="navigation">
         <div class="container">
             <button type="button" class="navbar-toggle"
                     data-toggle="collapse" data-target=".navbar-collapse">
@@ -39,7 +39,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </nav>
 {% endblock %} {# end nav #}
 
 {% block content %}
