--- a/templates/items/item_stub.html
+++ b/templates/items/item_stub.html
@@ -3,6 +3,7 @@
 
 <li class="item-stub col-xs-12 col-sm-6 col-lg-3">
     <div class="panel panel-default">
+    {% if current_user %}
         {% if trading %}
             {% set post_url = url_for('trades.trading') %}
             {% set form_button = util.form_button(post_url,
@@ -15,8 +16,9 @@
             {% set form_button=util.form_button(post_url,
                 util.icon('random')) %}
         {% endif %}
+    {% endif %}
         <div class="panel-heading">
-                {{ item.sheetmusic.title }} {{ form_button }}
+                {{ item.sheetmusic.title }} {% if current_user %}{{ form_button }} {% endif %}
         </div>
         <div class="Panel-body">
             {{ item.condition }}
