--- a/templates/sheets/sheet_music_stub.html
+++ b/templates/sheets/sheet_music_stub.html
@@ -17,7 +17,7 @@
                  {% endif %}">
         </div>
 
-        {% set num_items = sheet_music.items | count %}
+        {% set num_items = sheet_music.items |  selectattr('available')| list | count %}
         <div class=" text-center">
             {{ num_items }} copies available !
         </div>
