--- a/templates/util.html
+++ b/templates/util.html
@@ -49,7 +49,10 @@
 {%- endmacro %}
 
 
-{% macro form_button(url, content, method='post', class='btn-link', input=False, input_value=None, input_name=None) -%}
+{% macro form_button(url, content,
+                    method='post', class='btn-link',
+                    input=False, input_value=None,
+                    input_name=None) -%}
 <form style="display: inline;" action='{{url}}' method='{{method}}'>
     {% if input and input_value and input_name%}
     <input type="hidden" value="{{ input_value }}" name="{{ input_name }}">
