--- a/templates/trades/trade_stub.html
+++ b/templates/trades/trade_stub.html
@@ -1,5 +1,22 @@
-<div class="trade-item col-xs-12 col-md-6 col-lg-4">
-    <div class="panel panel-info">
+{% import 'util.html' as util %}
 
+<div class="trade-stub col-xs-12 col-md-6 col-lg-4">
+    <div class="panel panel-info">
+        from {{ trade.user_from.username }}
+
+        {% if not trade.completed %}
+        {{  util.form_button(url_for('trades.accept_trade', trade_id=trade.id ),
+                    util.icon('ok', extra_classes=['accept-trade'])) }}
+        {{  util.form_button(url_for('trades.reject_trade', trade_id=trade.id ),
+                    util.icon('remove', extra_classes=['reject-trade']) ) }}
+        {% endif %}
+    </div>
+    <div class="panel panel-body">
+        {% if trade.completed %}wanted{% else %}wants{% endif %}
+        {{  trade.item_to.sheetmusic.title }}
     </div>
 </div>
+
+
+
+
