added item tests

--- a/templates/items/view_item.html
+++ b/templates/items/view_item.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
 {% block page_content %}
-    <h1> Item {{ item_id }}</h1>
+    <h1> {{ item.sheetmusic.title }}</h1>
 
 {% endblock page_content %}
