--- a/templates/items/dashboard_item.html
+++ b/templates/items/dashboard_item.html
@@ -7,6 +7,10 @@
                                  util.icon('pencil'),
                                  method='GET',
                                  class='btn-link pull-right')}}
+
+            {{ util.form_button(url_for('items.remove', item_id=item.id),
+                                util.icon('remove-sign'),
+                                class='btn-link pull-right')}}
         </div>
 
         <div class="panel-body">
