closes #9 users can now add images for their items. In addition, a thumbnailing service is introduced

--- a/templates/form_macros.html
+++ b/templates/form_macros.html
@@ -1,5 +1,7 @@
-{%  macro create_form(form, controller, method='POST', url_params={}) -%}
-    <form action="{{ url_for(controller, **url_params) }}" method="{{ method }}">
+{%  macro create_form(form, controller, method='POST', url_params={}, enctype="") -%}
+    <form action="{{ url_for(controller, **url_params) }}"
+          method="{{ method }}"
+          {% if enctype != "" %} enctype="{{ enctype }}" {% endif %}>
         {% for field in form %}
             {# if the form has any errors set the following variables #}
             {% if field.errors %}
