--- a/templates/main.html
+++ b/templates/main.html
@@ -10,7 +10,7 @@
     <div class="jumbotron text-center">
         <h1>Trade your sheet music!</h1>
         <form action="{{ url_for('.search_results') }}" method="GET">
-            <input name="q" class='form-control input-lg' type="text" placeholder="Vivaldi 4 Seasons">
+            <input id='q_box' name="q" class='form-control input-lg' type="text" placeholder="Vivaldi 4 Seasons">
         </form>
     </div>
 
