--- a/templates/items/view_item.html
+++ b/templates/items/view_item.html
@@ -9,7 +9,7 @@
     <a id="edit-item" href="{{ url_for('.update', item_id=item.id) }}">Edit item</a>
     {% endif %}
 
-    {% if not item.available %}
+    {% if not item.available and item.user == current_user %}
         <p class="item-not-available">this item is hidden from other users</p>
     {% endif %}
 
