--- a/templates/items/item_stub.html
+++ b/templates/items/item_stub.html
@@ -22,8 +22,35 @@
                 {% if current_user %}{{ form_button }} {% endif %}
         </div>
         <div class="Panel-body">
-            {{ item.condition }}
-            {{ item.user.username }}
+            <table class="table">
+                <tbody>
+                    <tr>
+                        <td>
+                            owner
+                        </td>
+                        <td>
+                            {{ item.user.username}}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            condition
+                        </td>
+                        <td>
+                            {{ item.condition_text }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            description
+                        </td>
+                        <td>
+                            {{ item.description }}
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
         </div>
     </div>
 </li>
